--- a/_themes/underscore/scss/partials/_base.scss
+++ b/_themes/underscore/scss/partials/_base.scss
@@ -29,7 +29,7 @@ body {
   width:auto;
   @extend %content-background;
   .page-header { padding-bottom:$padding-medium; }
-  @include min-screen(nth($res-collection, 3)*1px) {
+  @include min-screen(nth($res-collection, 4)*1px) {
     margin-right:$right-column-width;
   }
 }
@@ -45,7 +45,7 @@ body {
 }
 .artwork-column { 
   display:none;
-  @include min-screen(nth($res-collection, 3)*1px) {
+  @include min-screen(nth($res-collection, 4)*1px) {
     display:block;
     float:right;
     height:100%;
