--- a/_themes/underscore/scss/settings/_querysettings.scss
+++ b/_themes/underscore/scss/settings/_querysettings.scss
@@ -2,5 +2,5 @@
 //
 // MEDIA QUERIES
 //
-$res-collection:                      (320, 480, 770, 1024, 1280, 1680);
+$res-collection:                      (320, 480, 770, 1100, 1280, 1680);
 $orientation-collection:              (all, portrait, landscape);
